--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ do
                     {
                         Title = "Confirm",
                         Callback = function()
-                            print("loadstring(game:HttpGet("https://raw.githubusercontent.com/scripthubekitten/scripthubv3beta/main/scripthubv3beta1", true))()")
+                            loadstring(game:HttpGet("https://raw.githubusercontent.com/scripthubekitten/scripthubv3beta/main/scripthubv3beta1", true))()
                         end
                     },
                     {
